--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+      }
+
+      .banner-image {
+    width: 128px;
+    height: 128px;
+  }
+    </style>
     
   </head>
   <body>
@@ -9,7 +20,7 @@
     </div>
 
     <div class="name">
-      Raghu Betina
+      Nhi P Tran
     </div>
     <div class="link">
       <img
