--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
         padding-top: 40px;
         padding-bottom: 40px;
       }
+    </style>
 
-      .banner-image {
-    width: 128px;
-    height: 128px;
-  }
+    <style>
+    .banner-image {
+      width: 128px;
+      height: 128px;
+      object-fit: cover;
+      border-radius: 128px;
+      }
     </style>
     
   </head>
