--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
   </head>
   <body>
-    <div class="banner">
+    <div class="banner-image">
       <img src="profile-pic.jpg" alt="Nhi Tran headshot">
     </div>
 
