--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     
   </head>
   <body>
-    <div class="banner-image">
-      <img src="profile-pic.jpg" alt="Nhi Tran headshot">
+    <div class="banner">
+      <img src="profile-pic.jpg" alt="Nhi Tran headshot" class="banner-image">
     </div>
 
     <div class="name">
