--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </div>
     <div class="link">
       <img
-        src="https://www.ycombinator.com/assets/ycdc/yc-og-image-0cfa80cac837d64d9b4f0705950000b66906ac032791376bd721f246fafcc7b4.png">
+        src="https://images.unsplash.com/photo-1612363148951-15f16817648f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80">
 
-      <a target="_blank" href="http://paulgraham.com/startupideas.html">List of House Plants</a>
+      <a target="_blank" href="https://www.realsimple.com/home-organizing/gardening/indoor/popular-house-plants">List of House Plants</a>
     </div>
 
     <div class="link">
