--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
         padding-top: 40px;
         padding-bottom: 40px;
       }
-    </style>
+    
+      .banner-image {
+        width: 128px;
+        height: 128px;
+        object-fit: cover;
+        border-radius: 128px;
+      }
 
-    <style>
-    .banner-image {
-      width: 128px;
-      height: 128px;
-      object-fit: cover;
-      border-radius: 128px;
+      .thumbnail {
+        width: 48px;
+        height: 48px;
+        border-radius: 48px;
+        object-fit: cover;
       }
     </style>
     
@@ -28,13 +33,13 @@
     </div>
     <div class="link">
       <img
-        src="https://images.unsplash.com/photo-1612363148951-15f16817648f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80">
+        src="https://images.unsplash.com/photo-1612363148951-15f16817648f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80" class="thumbnail">
 
       <a target="_blank" href="https://www.realsimple.com/home-organizing/gardening/indoor/popular-house-plants">List of House Plants</a>
     </div>
 
     <div class="link">
-      <img src="https://images.unsplash.com/photo-1597055181414-98245499529a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80">
+      <img src="https://images.unsplash.com/photo-1597055181414-98245499529a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80" class="thumbnail">
 
       <a target="_blank"
         href="https://platthillnursery.com/caring-for-hoya-plants/">How to Take Care of Hoyas</a>
@@ -42,7 +47,7 @@
 
     <div class="link">
       <img
-        src="https://plus.unsplash.com/premium_photo-1679093465287-fcfd73d6bc92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80">
+        src="https://plus.unsplash.com/premium_photo-1679093465287-fcfd73d6bc92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80" class="thumbnail">
 
       <a target="_blank" href="https://www.gardeners.com/buy/gardening/garden-tools/">Garden Toolkits and Products</a>
     </div>
