color-change-background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       }
 
       body {
-        background-color: #004643;
+        background-color: #66d0cb
+        opacity: 60%;
       }
 
       .name {
