--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       }
 
       body {
-        background-color: #66d0cb
-        opacity: 60%;
+        background-color: #66d0cb;
       }
 
       .name {
