--- a/index.html
+++ b/index.html
@@ -7,40 +7,47 @@
         padding-bottom: 40px;
       }
     
-      .banner-image {
+    .banner-image {
         width: 128px;
         height: 128px;
         object-fit: cover;
         border-radius: 128px;
       }
 
-      .thumbnail {
+    .thumbnail {
         width: 48px;
         height: 48px;
         border-radius: 48px;
         object-fit: cover;
       }
 
-      body {
+    body {
         background-color: #66d0cb;
       }
 
-      .name {
+    .name {
        color: #fffffe;
       }
 
-      .social-icons a {
+    .social-icons a {
        color: #fffffe;
        text-decoration: none;
       }
 
-      .link {
+    .link {
        background-color: #f9bc60;
       }
 
-      .link a {
+    .link a {
        color: #001e1d;
        text-decoration: none;
+      }
+
+    .items {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      max-width: 640px;
       }
     </style>
     
