--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
        text-decoration: none;
       }
 
-    .items {
+    .link {
+      background-color: #f9bc60;
       display: flex;
-      flex-direction: column;
-      gap: 30px;
-      max-width: 640px;
-      }
+      align-items: center;
+    }
+      
     </style>
     
   </head>
