--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
 
     .name {
        color: #fffffe;
+       display:flex;
+       justify-content: center;
       }
 
     .social-icons a {
        color: #fffffe;
+       display:flex;
+       justify-content: center;
        text-decoration: none;
       }
 
@@ -38,6 +42,7 @@
       background-color: #f9bc60;
       display: flex;
       align-items: center;
+      padding: 10px;
       }
 
     .link a {
