--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         height: 128px;
         object-fit: cover;
         border-radius: 128px;
+
       }
 
     .thumbnail {
@@ -20,6 +21,8 @@
         height: 48px;
         border-radius: 48px;
         object-fit: cover;
+        display:flex;
+        justify-content: center
       }
 
     body {
