--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
       body {
         padding-top: 40px;
         padding-bottom: 40px;
-        width:640px;
       }
     
     .banner-image {
@@ -34,6 +33,13 @@
        display:flex;
        justify-content: center;
       }
+
+    .items {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      max-width: 640px;
+    }
 
     .social-icons a {
        color: #fffffe;
