--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
   </head>
   <body>
-    <item>
+  <div class="item">
     <div class="banner">
       <img src="profile-pic.jpg" alt="Nhi Tran headshot" class="banner-image">
     </div>
@@ -97,6 +97,6 @@
 
       <a target="_blank" href="https://www.gardeners.com/buy/gardening/garden-tools/">Garden Toolkits and Products</a>
     </div>
-  </item>
+  <div class="item">
   </body>
 </html>
