--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       flex-direction: column;
       gap: 30px;
       max-width: 640px;
+      border: solid green;
     }
 
     .social-icons a {
