--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     
   </head>
   <body>
-  <div class="item">
+  <div class="items">
     <div class="banner">
       <img src="profile-pic.jpg" alt="Nhi Tran headshot" class="banner-image">
     </div>
@@ -98,6 +98,6 @@
 
       <a target="_blank" href="https://www.gardeners.com/buy/gardening/garden-tools/">Garden Toolkits and Products</a>
     </div>
-  <div class="item">
+  </div>
   </body>
 </html>
