--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         height: 128px;
         object-fit: cover;
         border-radius: 128px;
+        justify-content: center
 
       }
 
@@ -39,7 +40,7 @@
       flex-direction: column;
       gap: 30px;
       max-width: 640px;
-      border: solid green;
+      justify-content: center
     }
 
     .social-icons a {
