--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
       text-align: center;
       flex-grow: 2;
     }
+
+   .banner {
+    display: flex;
+    justify-content: center;
+    }
     * {
     border: thin red solid;
     }
