--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       flex-direction: column;
       gap: 30px;
       max-width: 640px;
-      justify-content: center
+      justify-content: center;
     }
 
     .social-icons a {
