--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       gap: 30px;
       max-width: 640px;
       justify-content: center;
+      border:green;
     }
 
     .social-icons a {
@@ -67,9 +68,6 @@
    .banner {
     display: flex;
     justify-content: center;
-    }
-    * {
-    border: thin red solid;
     }
     
     </style>
