--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       gap: 30px;
       max-width: 640px;
       justify-content: center;
-      border:green;
+      border:solid green;
     }
 
     .social-icons a {
@@ -68,6 +68,7 @@
    .banner {
     display: flex;
     justify-content: center;
+    border: solid pink;
     }
     
     </style>
