--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       body {
         padding-top: 40px;
         padding-bottom: 40px;
+        background-color: #66d0cb;
+        display:flex;
+        justify-content: center;
       }
     
     .banner-image {
@@ -22,14 +25,10 @@
         border-radius: 48px;
         object-fit: cover;
         display:flex;
-        justify-content: center
+        justify-content: center;
       }
 
-    body {
-        background-color: #66d0cb;
-      }
-
-    .name {
+      .name {
        color: #fffffe;
        display:flex;
        justify-content: center;
