--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         object-fit: cover;
         display:flex;
         justify-content: center;
+        margin: 0px 5px;
       }
 
       .name {
